# nirwl_metacal

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run-mypy  sample_config.yaml
.github/workflows/: build.yaml  lint.yaml  publish.yaml
nirwl_metacal/: main.py  metacal.py  metacal_record.py  utils.py
tests/: test_nirwl.py  test_utils.py
